test/null-check/violations/BadAccesses.out
[31mSafety Violation[00m: Use of potentially null pointer in store at BadAccesses.cc:13
[31mSafety Violation[00m: Use of potentially null pointer in store at BadAccesses.cc:14
[31mSafety Violation[00m: Use of potentially null pointer in store at BadAccesses.cc:15
[31mSafety Violation[00m: Use of potentially null pointer in store at BadAccesses.cc:16
clang++-17: error: clang frontend command failed with exit code 2 (use -v to see invocation)
